Creating Group model and adding Group CRUD operations

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -282,6 +282,7 @@
   "form.please-wait": "Please wait",
   "form.send": "Send",
   "forum.form.FeaturedSection": "Show the put forward comments",
+  "forum.form.Featured": "Put forward forum",
   "forum.form.copy-suffix": "-copy",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Create",
@@ -317,6 +318,12 @@
   "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
   "forum.visibility.public.title": "Open for All",
   "forum.visibility.title": "Visibility",
+  "group.form.add.title": "Group",
+  "group.form.edit.title": "Edit group",
+  "group.form.name.label": "Group Name",
+  "group.form.logoUrl.label": "Logo URL",
+  "group.form.members.label":"Members",
+  "group.list.users.title": "List of Saved Users",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
@@ -558,6 +565,7 @@
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
   "system.upload":"Files",
+  "system.group":"Groups",
   "system.list.add" :"Add Forum",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You don't want to support this",
