--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -292,6 +292,7 @@
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
   "forum.form.FeaturedSection": "Afficher les commentaires mis en avant",
+  "forum.form.Featured": "Consultation mise en avant",
   "forum.form.copy-suffix": "-copie",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Créer une consultation",
@@ -327,6 +328,12 @@
   "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
   "forum.visibility.public.title": "Ouvert à tous",
   "forum.visibility.title": "Visibilité",
+  "group.form.add.title": "Groupe",
+  "group.form.edit.title": "Modifier le groupe",
+  "group.form.name.label": "Nom du Groupe",
+  "group.form.logoUrl.label": "Logo URL",
+  "group.form.members.label":"Membres",
+  "group.list.users.title": "Liste des utilisateurs enregistrés",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
@@ -565,6 +572,7 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.upload":"Fichiers",
+  "system.group":"Groupes",
   "system.list.add" :"Créer une consultation",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
