Adding check on group while creating a forum and associating a forum to a group

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -324,6 +324,7 @@
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Members",
   "group.list.users.title": "List of Saved Users",
+  "group.creation.message.onsuccess": "Group successfuly saved",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
