--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -334,6 +334,7 @@
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Membres",
   "group.list.users.title": "Liste des utilisateurs enregistrés",
+  "group.creation.message.onsuccess": "Le groupe a été sauvegardé avec succès",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
