Adding some style to groups

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -318,13 +318,14 @@
   "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
   "forum.visibility.public.title": "Open for All",
   "forum.visibility.title": "Visibility",
-  "group.form.add.title": "Group",
+  "group.form.add.title": "Create a group",
   "group.form.edit.title": "Edit group",
   "group.form.name.label": "Group Name",
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Members",
   "group.list.users.title": "List of Saved Users",
   "group.creation.message.onsuccess": "Group successfuly saved",
+  "group.form.create.submit": "Create Group",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
