--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -328,13 +328,14 @@
   "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
   "forum.visibility.public.title": "Ouvert à tous",
   "forum.visibility.title": "Visibilité",
-  "group.form.add.title": "Groupe",
+  "group.form.add.title": "Créer un groupe",
   "group.form.edit.title": "Modifier le groupe",
   "group.form.name.label": "Nom du Groupe",
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Membres",
   "group.list.users.title": "Liste des utilisateurs enregistrés",
   "group.creation.message.onsuccess": "Le groupe a été sauvegardé avec succès",
+  "group.form.create.submit": "Créer un groupe",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
