Showing forums by visibility in groupView and adding description to group model

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -331,13 +331,15 @@
   "group.form.add.title": "Créer un groupe",
   "group.form.edit.title": "Modifier le groupe",
   "group.form.name.label": "Nom du Groupe",
+  "group.form.description.label": "Description",
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Membres",
   "group.list.users.title": "Liste des utilisateurs enregistrés",
   "group.creation.message.onsuccess": "Le groupe a été sauvegardé avec succès",
   "group.form.create.submit": "Créer un groupe",
   "group.list.search.placeholder": "Rechercher un groupe ...",
-  "group.list.forums.title": "Liste des consultations",
+  "group.list.forums.public.title": "Liste des consultations publiques",
+  "group.list.forums.private.title": "Liste des consultations privées",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
