--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -321,13 +321,15 @@
   "group.form.add.title": "Create a group",
   "group.form.edit.title": "Edit group",
   "group.form.name.label": "Group Name",
+  "group.form.description.label": "Description",
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Members",
   "group.list.users.title": "List of Saved Users",
   "group.creation.message.onsuccess": "Group successfuly saved",
   "group.form.create.submit": "Create Group",
   "group.list.search.placeholder": "Search a group",
-  "group.list.forums.title": "Forums List",
+  "group.list.forums.public.title": "Public Forums List",
+  "group.list.forums.private.title": "Private Forums List",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
