--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -318,6 +318,10 @@
   "forum.visibility.public.description": "Anyone can see the content and will be able to participate.",
   "forum.visibility.public.title": "Open for All",
   "forum.visibility.title": "Visibility",
+  "footer-info": "You are :",
+  "footer-info-particular": "A particular",
+  "footer-info-group": "A group",
+  "footer-info-faq": "Read our FAQ",
   "group.form.add.title": "Create a group",
   "group.form.edit.title": "Edit group",
   "group.form.name.label": "Group Name",
@@ -330,6 +334,7 @@
   "group.list.search.placeholder": "Search a group",
   "group.list.forums.public.title": "Public Forums List",
   "group.list.forums.private.title": "Private Forums List",
+  "go.back.button": "Go Back",
   "header.admin": "Manage",
   "header.forums": "My Communities",
   "header.insecure-warning": "Warning: You are using an insecure version of DemocracyOS. See the docs for details on implementing SSL.",
@@ -360,6 +365,14 @@
   "homepage.featured.votedToday.empty": "No votes today",
   "homepage.featured.votedToday.title": "Most rated of today",
   "homepage.no-topics": "There are no topics to display",
+  "hub.header.title": "Welcome to HUB!",
+  "hub.button.info" : "Everithing about the HUB",
+  "hub.forums.button.title" :"Open forums",
+  "hub.forums.title": "Discover the open forums & participate!",
+  "hub.associations.title": "You are an association & you want to open a forum ?",
+  "hub.associations.button.title": "Join the HUB",
+  "hub.active.associations.title": "Active assocations in the HUB",
+  "hub.last.consultations.title": "Check out the latest forums",
   "invalid.password": "Invalid password",
   "ldap.error.default": "LDAP error : ",
   "markdown.cheatsheet.title": "Formatting help",
@@ -398,6 +411,7 @@
   "newsfeed.welcome.body": "Just a few clicks, and you will be able to setup your own DemocracyOS.",
   "newsfeed.welcome.join": "Sign up!",
   "newsfeed.welcome.title": "Start your community now",
+  "need-help": "You need help ?",
   "notifications.downvote.verb": "downvoted your comment",
   "notifications.empty": "You don't have notifications",
   "notifications.error": "Unable to connect to notifications engine",
