--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -328,6 +328,10 @@
   "forum.visibility.public.description": "Toute personne peut voir le contenu de ce forum et pourra participer.",
   "forum.visibility.public.title": "Ouvert à tous",
   "forum.visibility.title": "Visibilité",
+  "footer-info": "Vous êtes :",
+  "footer-info-particular": " Un particulier",
+  "footer-info-group": "Une association",
+  "footer-info-faq": "Lire notre FAQ",
   "group.form.add.title": "Créer un groupe",
   "group.form.edit.title": "Modifier le groupe",
   "group.form.name.label": "Nom du Groupe",
@@ -337,9 +341,10 @@
   "group.list.users.title": "Liste des utilisateurs enregistrés",
   "group.creation.message.onsuccess": "Le groupe a été sauvegardé avec succès",
   "group.form.create.submit": "Créer un groupe",
-  "group.list.search.placeholder": "Rechercher un groupe ...",
+  "group.list.search.placeholder": "Rechercher une association ...",
   "group.list.forums.public.title": "Liste des consultations publiques",
   "group.list.forums.private.title": "Liste des consultations privées",
+  "go.back.button": "Revenir en arrière",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
@@ -370,6 +375,14 @@
   "homepage.featured.votedToday.empty": "Aucun vote aujourd'hui",
   "homepage.featured.votedToday.title": "Les plus votés aujourd'hui",
   "homepage.no-topics": "Il n'y a pas de débat à afficher",
+  "hub.header.title": "Bienvenue sur le HUB!",
+  "hub.button.info" : "Tout sur le HUB",
+  "hub.forums.button.title" :"Les contultations ouvertes",
+  "hub.forums.title": "Découvrez les consultations ouvertes & participez!",
+  "hub.associations.title": "Vous êtes une association & vous souhaitez ouvrir un espace de consultation ?",
+  "hub.associations.button.title": "Rejoindre le HUB",
+  "hub.active.associations.title": "Les associations actives sur le HUB",
+  "hub.last.consultations.title": "Découvrez les dernières consultations",
   "invalid.password": "Mot de passe invalide",
   "ldap.error.default": "Erreur LDAP : ",
   "markdown.cheatsheet.title": "Mise en forme des textes",
@@ -408,6 +421,7 @@
   "newsfeed.welcome.body": "En quelques clics, vous pouvez créer votre propre consultation.",
   "newsfeed.welcome.join": "Inscription",
   "newsfeed.welcome.title": "Créer votre consultation dès maintenant",
+  "need-help": "Besoin d'aide ?",
   "notifications.downvote.verb": "n'a pas apprécié votre contribution",
   "notifications.empty": "Vous n'avez pas de notification",
   "notifications.error": "Impossible de se connecter au center de notification",
