:construction: WIP Merge branch 'master' into alt/agora-dev

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -553,9 +553,12 @@
   "system.users.search.placeholder": "Rechercher un utilisateur ...",
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
+  "topics.actions.answer": "Votre vote était:",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
+  "topics.actions.feedback": "Votre vote a bien été enregistré.",
   "topics.actions.poll.do": "Voter",
+  "topics.actions.thanks": "Merci!",
   "user.extra.age.1": "moins de 15",
   "user.extra.age.10": "55-59",
   "user.extra.age.11": "60-64",
