:boom: :lipstick: Hub Home ++

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -324,7 +324,7 @@
   "forum.visibility.public.title": "Open for All",
   "forum.visibility.title": "Visibility",
   "footer-info": "You are :",
-  "footer-info-particular": "A particular",
+  "footer-info-solo": "A particular",
   "footer-info-group": "A group",
   "footer-info-faq": "Read our FAQ",
   "group.form.add.title": "Create a group",
