:lipstick: Hub Home ++

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -334,7 +334,7 @@
   "footer-info-faq": "Lire notre FAQ",
   "group.form.add.title": "Créer un groupe",
   "group.form.edit.title": "Modifier le groupe",
-  "group.form.name.label": "Nom du Groupe",
+  "group.form.name.label": "Nom de l'association",
   "group.form.description.label": "Description",
   "group.form.logoUrl.label": "Logo URL",
   "group.form.members.label":"Membres",
@@ -592,7 +592,7 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.upload":"Fichiers",
-  "system.group":"Groupes",
+  "system.group":"Associations",
   "system.list.add" :"Créer une consultation",
   "topics.actions.answer": "Votre vote était:",
   "topics.actions.cause.do": "Soutenir",
