--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -2,7 +2,6 @@
   "404.back-to-democracyos": "Revenir sur la page d'accueil de DemocracyOS",
   "404.go-back-to": "retour à",
   "404.not-exists": "Cette page n'existe pas",
-  "add-user-input.placeholder": "Ajouter une personne",
   "admin-comments.dowload-as-csv": "Télécharger tous les commentaires au format .csv",
   "admin-forums-form.message.onsuccess": "Consultation sauvegardée avec succès",
   "admin-general.form.title": "Paramêtres généraux",
@@ -233,7 +232,7 @@
   "common.auth-error": "La requête n'est pas autorisée.",
   "common.back": "Retour",
   "common.cancel": "Annuler",
-  "common.close": "Ferme",
+  "common.close": "Fermer",
   "common.closed": "Fermé",
   "common.comment": "commentaire",
   "common.comments": "commentaires",
@@ -272,8 +271,11 @@
   "common.upload.one": "Envoyer un fichier",
   "common.upload.select.many": "Choisir plusieurs fichiers",
   "common.upload.select.one": "Choisir un fichier",
+  "common.upload.error.type": "Ce type de fichier n'est pas pris en charge : {type}",
+  "common.upload.error.size": "Le fichier est trop volumineux : {size}",
   "common.user": "participant",
   "common.users": "participants",
+  "common.users.placeholder": "Ajouter une personne",
   "common.view": "Voir",
   "common.vote": "vote",
   "common.votes": "votes",
@@ -344,6 +346,9 @@
   "group.list.search.placeholder": "Rechercher une association ...",
   "group.list.forums.public.title": "Liste des consultations publiques",
   "group.list.forums.private.title": "Liste des consultations privées",
+  "group.users.admin": "administrateur du groupe",
+  "group.users.owners": "Administrateur(s) du groupe",
+  "group.users.remove": "Retirer du groupe",
   "go.back.button": "Revenir en arrière",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
