Ticket #2446 : ajout d'agriculteur/agricultrice dans les jobs Ticket #2461 : Complément wording  Case à cocher "Mettre à jour à la prochaine connexion"

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -439,7 +439,7 @@
   "settings.sidebar.forums": "Consultation",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
-  "settings.updateOnNextLogin": "Mettre à jour à la prochaine connexion",
+  "settings.updateOnNextLogin": "Mettre à jour à la prochaine connexion. Attention, induit la perte d’anonymat de vos contributions.",
   "settings.user-name": "Pseudonyme",
   "sidebar.closed": "Clos",
   "sidebar.hide-voted": "Cacher mes votes",
@@ -532,6 +532,7 @@
   "user.extra.job.6": "Retraité-e",
   "user.extra.job.7": "Sans activité",
   "user.extra.job.8": "Autres",
+  "user.extra.job.9": "Agriculteur / Agricultrice",
   "user.extra.job.label": "Activité",
   "user.extra.org.label": "Organisation",
   "user.extra.postal.label": "Code postal",
